--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,9 +18,9 @@
 
     <actions>
         <action id="Toolkit.Json.CopyAsJsonAction" class="com.liuzhihang.toolkit.action.CopyAsJsonAction"
-                text="Copy As Json" description="Copy As Json">
+                text="CopyAsJsonAction" description="Copy As Json">
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl shift J"/>
+            <keyboard-shortcut keymap="$default" first-keystroke="shift meta J"/>
         </action>
     </actions>
 </idea-plugin>
