支持 2018.3 版本 修改部分字段丢失的问题

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,7 +18,7 @@
 
     <actions>
         <action id="Toolkit.Json.CopyAsJsonAction" class="com.liuzhihang.toolkit.action.CopyAsJsonAction"
-                text="CopyAsJsonAction" description="Copy As Json">
+                text="Copy As Json" description="Copy Java Bean as json string">
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
             <keyboard-shortcut keymap="$default" first-keystroke="shift meta J"/>
         </action>
